<resources>
    <string name="app_name">Healify</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_patients_list">PatientsList</string>
    <string name="title_activity_single_patient">SinglePatient</string>
    <string name="patient_image">Patient image</string>
    <string name="patient_name">Patient Name</string>
    <string name="title_activity_check_in_patient">CheckInPatient</string>

    <string name="temperature">Temperature</string>
    <string name="drugs">Drugs</string>
    <string name="check">Check-ups</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    //lista lekow

    <string-array name="units">
        <item>mg</item>
        <item>g</item>
        <item>ml</item>
    </string-array>

    <string-array name="beacons">
    </string-array>

</resources>
