<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/patient_browse_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="60dp">

        <Button
            android:id="@+id/temp_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:textSize="30sp"
            android:text="@string/temperature"
            android:background="@color/primary_dark"
            android:textColor="@color/md_light_background"/>

        <Button
            android:id="@+id/drug_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:textSize="30sp"
            android:text="@string/drugs"
            android:background="@color/primary_dark"
            android:textColor="@color/md_light_background" />

        <Button
            android:id="@+id/check_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:textSize="30sp"
            android:text="@string/check"
            android:background="@color/primary"
            android:textColor="@color/md_light_background" />

</LinearLayout>

